# INEGI_package

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: __init__.py  inegi_api_.py  key_INEGI.py
tests/: test_inegi_api_.py
