[tool.poetry]
name = "inegi_api_"
version = "0.1.0"
description = "A package that uses the INEGI API to make getting information more easy and allows the user to calculate poverty lines across years and also calculate workeforce poverty based on a particual poverty line a minimum wage level"
authors = ["Rolando Chapiro Uziel "]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
requests = "^2.28.1"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
